# PhongShaderSample

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
resources/: Sample.frag  Sample.vert
src/: Main.cpp
